@@ -30,6 +30,9 @@ import org.hyperledger.iroha.android.client.transport.TransportResponse;
 /** Torii-backed issuer client for Offline Note wallet loads. */
 public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClient {
   private static final String KEYS_REFILL_PATH = "/v1/offline/v2/keys/refill";
+  private static final String HEADER_WITNESS = "X-Iroha-Witness";
+  private static final String DEVICE_PROOF_PLATFORM_IOS = "ios";
+  private static final String DEVICE_PROOF_PLATFORM_ANDROID = "android";
   public static final String RETIRED_OFFLINE_NOTE_ISSUE_MESSAGE =
       "Classic Offline Note issue transactions are retired; use Kagemusha online-to-offline top-up flows.";
 
@@ -57,8 +60,8 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
         PlatformHttpTransportExecutor.createDefault(),
         URI.create("http://localhost:8080"),
         Duration.ofSeconds(15),
-        Map.of(),
-        List.of(),
+        Collections.emptyMap(),
+        Collections.emptyList(),
         System::currentTimeMillis,
         new UuidOfflineNoteIdGenerator());
   }
@@ -132,8 +135,11 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
     this.baseUri = Objects.requireNonNull(baseUri, "baseUri");
     this.timeout = timeout;
     this.defaultHeaders =
-        Collections.unmodifiableMap(new LinkedHashMap<>(defaultHeaders == null ? Map.of() : defaultHeaders));
-    this.observers = List.copyOf(observers == null ? List.of() : observers);
+        Collections.unmodifiableMap(stripRetiredCanonicalBodyAuthHeaders(
+            defaultHeaders == null ? Collections.emptyMap() : defaultHeaders));
+    this.observers =
+        Collections.unmodifiableList(
+            new ArrayList<>(observers == null ? Collections.emptyList() : observers));
     this.clock = Objects.requireNonNull(clock, "clock");
     this.nonceGenerator = Objects.requireNonNull(nonceGenerator, "nonceGenerator");
     this.idempotencyKeysEnabled = idempotencyKeysEnabled;
@@ -245,11 +251,12 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
         body,
         payload -> {
           final Map<String, Object> response = expectObject(parseJson(payload), "keys refill response");
-          notifyIssuerResponse(KEYS_REFILL_PATH, response);
           final Map<String, Object> lineageState =
               expectObject(requiredValue(response, "lineage_state"), "lineage_state");
+          validateLineageState(lineageState);
           final OfflineNote.KeyCertificate keyCertificate =
               parseKeyCertificate(expectObject(requiredValue(response, "key_certificate"), "key_certificate"));
+          notifyIssuerResponse(KEYS_REFILL_PATH, response);
           final PendingLoad pending =
               new PendingLoad(
                   requiredString(response, "operation_id"),
@@ -297,7 +304,9 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
                             + response.statusCode()
                             + " on "
                             + request.uri().getPath()
-                            + (bodyPreview == null || bodyPreview.isBlank() ? "" : ". body=" + bodyPreview),
+                            + (bodyPreview == null || bodyPreview.isEmpty()
+                                ? ""
+                                : ". body=" + bodyPreview),
                         response.statusCode(),
                         null,
                         bodyPreview);
@@ -370,7 +379,50 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
     final Map<String, Object> proof =
         deviceProofProvider.currentDeviceProof(
             chainId, accountId, assetDefinitionId, operation, lineageId, amount);
+    validateDeviceProof(proof);
     body.put("device_proof", OfflineNoteIssuerDeviceBinding.deepCopyObject(proof));
+  }
+
+  private static void validateDeviceProof(final Map<String, Object> proof) {
+    if (proof == null) {
+      throw new IllegalStateException("device_proof must be a JSON object");
+    }
+    rejectUnexpectedDeviceProofFields(proof);
+    final String platform = requiredString(proof, "platform");
+    if (!isSupportedDeviceProofPlatform(platform)) {
+      throw new IllegalStateException("platform must be a supported first-release value");
+    }
+    requiredExactNonEmptyString(proof, "attestation_key_id");
+    requireLowerHex32(requiredString(proof, "challenge_hash_hex"), "challenge_hash_hex");
+    decodeExactBase64(requiredString(proof, "assertion_base64"), "assertion_base64");
+    if (proof.containsKey("counter")) {
+      final long counter = requiredDeviceProofCounter(proof.get("counter"));
+      if (counter < 0L) {
+        throw new IllegalStateException("counter must be non-negative");
+      }
+    }
+  }
+
+  private static void rejectUnexpectedDeviceProofFields(final Map<String, Object> proof) {
+    for (final String field : proof.keySet()) {
+      if (!isDeviceProofField(field)) {
+        throw new IllegalStateException("device_proof." + field + " is not supported");
+      }
+    }
+  }
+
+  private static boolean isDeviceProofField(final String field) {
+    return "platform".equals(field)
+        || "attestation_key_id".equals(field)
+        || "challenge_hash_hex".equals(field)
+        || "assertion_base64".equals(field)
+        || "counter".equals(field);
+  }
+
+  private static boolean isSupportedDeviceProofPlatform(final String platform) {
+    return DEVICE_PROOF_PLATFORM_IOS.equals(platform)
+        || DEVICE_PROOF_PLATFORM_ANDROID.equals(platform)
+        || OfflineNoteV2.ANDROID_KEYMINT_PLATFORM.equals(platform);
   }
 
   private URI resolvePath(final String path) {
@@ -411,13 +463,13 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
         requiredString(value, "key_id"),
         requiredString(value, "device_id"),
         requiredString(value, "account_id"),
-        decodeBase64(requiredString(value, "public_key"), "public_key"),
-        requiredString(value, "assertion_scheme"),
-        requiredString(value, "assertion_key_algorithm"),
-        decodeBase64(requiredString(value, "assertion_public_key"), "assertion_public_key"),
+        decodeExactBase64(requiredString(value, "public_key"), "public_key"),
+        requiredAssertionScheme(value),
+        requiredAssertionKeyAlgorithm(value),
+        decodeExactBase64(requiredString(value, "assertion_public_key"), "assertion_public_key"),
         optionalAssertionUsageCountLimit(value.get("assertion_usage_count_limit")),
         requiredBoolean(value, "one_use"),
-        decodeBase64(requiredString(value, "issuer_signature_base64"), "issuer_signature_base64"));
+        decodeExactBase64(requiredString(value, "issuer_signature_base64"), "issuer_signature_base64"));
   }
 
   private static StoredLineageState storedLineageState(
@@ -430,6 +482,7 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
       final Map<String, Object> lineageState,
       final OfflineNote.KeyCertificate keyCertificate,
       final Long keyCertificateExpiresAtMs) {
+    validateLineageState(lineageState);
     final Map<String, Object> authorization = optionalObject(lineageState.get("authorization"));
     return new StoredLineageState(
         requiredString(lineageState, "lineage_id"),
@@ -439,6 +492,72 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
         keyCertificateExpiresAtMs,
         keyCertificate,
         lineageState);
+  }
+
+  private static void validateLineageState(final Map<String, Object> lineageState) {
+    requiredExactNonEmptyString(lineageState, "lineage_id");
+    requiredExactNonEmptyString(lineageState, "account_id");
+    requiredExactNonEmptyString(lineageState, "device_id");
+    requiredExactNonEmptyString(lineageState, "offline_public_key");
+    requiredExactNonEmptyString(lineageState, "asset_definition_id");
+    requireNonNegativeAmountString(lineageState, "balance");
+    requireNonNegativeAmountString(lineageState, "locked_balance");
+    requireNonNegativeLong(requiredLong(lineageState, "server_revision"), "server_revision");
+    requireLowerHex32(requiredString(lineageState, "server_state_hash"), "server_state_hash");
+    requireNonNegativeLong(
+        requiredLong(lineageState, "pending_local_revision"), "pending_local_revision");
+    validateSpendAuthorization(
+        expectObject(requiredValue(lineageState, "authorization"), "authorization"));
+    requireCanonicalSignatureBase64(
+        requiredString(lineageState, "issuer_signature_base64"), "issuer_signature_base64");
+  }
+
+  private static void validateSpendAuthorization(final Map<String, Object> authorization) {
+    requiredExactNonEmptyString(authorization, "authorization_id");
+    requiredExactNonEmptyString(authorization, "lineage_id");
+    requiredExactNonEmptyString(authorization, "account_id");
+    optionalExactNonEmptyString(authorization, "device_id");
+    optionalExactNonEmptyString(authorization, "offline_public_key");
+    requiredExactNonEmptyString(authorization, "verdict_id");
+    requireNonNegativeAmountString(authorization, "max_balance");
+    requireNonNegativeAmountString(authorization, "max_tx_value");
+    final long issuedAtMs = requiredLong(authorization, "issued_at_ms");
+    final long refreshAtMs = requiredLong(authorization, "refresh_at_ms");
+    final long expiresAtMs = requiredLong(authorization, "expires_at_ms");
+    requireNonNegativeLong(issuedAtMs, "issued_at_ms");
+    if (refreshAtMs < issuedAtMs) {
+      throw new IllegalStateException("refresh_at_ms must be at or after issued_at_ms");
+    }
+    if (expiresAtMs <= issuedAtMs) {
+      throw new IllegalStateException("expires_at_ms must be after issued_at_ms");
+    }
+    if (authorization.containsKey("device_binding")) {
+      validateLineageDeviceBinding(
+          expectObject(requiredValue(authorization, "device_binding"), "authorization.device_binding"));
+    }
+    requireCanonicalSignatureBase64(
+        requiredString(authorization, "issuer_signature_base64"), "issuer_signature_base64");
+  }
+
+  private static void validateLineageDeviceBinding(final Map<String, Object> deviceBinding) {
+    if (deviceBinding.containsKey("platform")) {
+      final String platform = requiredString(deviceBinding, "platform");
+      if (!isSupportedDeviceProofPlatform(platform)) {
+        throw new IllegalStateException("device_binding.platform must be a supported first-release value");
+      }
+    }
+    requiredExactNonEmptyString(deviceBinding, "attestation_key_id");
+    requiredExactNonEmptyString(deviceBinding, "device_id");
+    requiredExactNonEmptyString(deviceBinding, "offline_public_key");
+    optionalExactNonEmptyString(deviceBinding, "assertion_public_key");
+    optionalExactNonEmptyString(deviceBinding, "ios_team_id");
+    optionalExactNonEmptyString(deviceBinding, "ios_bundle_id");
+    if (deviceBinding.containsKey("ios_environment")) {
+      final String environment = requiredString(deviceBinding, "ios_environment");
+      if (!"production".equals(environment) && !"development".equals(environment)) {
+        throw new IllegalStateException("device_binding.ios_environment must be production or development");
+      }
+    }
   }
 
   private static Object parseJson(final byte[] payload) {
@@ -477,6 +596,56 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
       throw new IllegalStateException(field + " must be a string");
     }
     return string;
+  }
+
+  private static String requiredExactNonEmptyString(
+      final Map<String, Object> value, final String field) {
+    final String string = requiredString(value, field);
+    if (string.isEmpty() || !string.equals(string.trim())) {
+      throw new IllegalStateException(field + " must be an exact non-empty string");
+    }
+    return string;
+  }
+
+  private static void optionalExactNonEmptyString(
+      final Map<String, Object> value, final String field) {
+    if (value.containsKey(field)) {
+      requiredExactNonEmptyString(value, field);
+    }
+  }
+
+  private static void requireNonNegativeLong(final long value, final String field) {
+    if (value < 0L) {
+      throw new IllegalStateException(field + " must be non-negative");
+    }
+  }
+
+  private static void requireNonNegativeAmountString(
+      final Map<String, Object> value, final String field) {
+    final String amount = requiredString(value, field);
+    if (amount.isEmpty() || !amount.equals(amount.trim())) {
+      throw new IllegalStateException(field + " must be an exact non-negative amount");
+    }
+    boolean seenDigit = false;
+    boolean seenDot = false;
+    for (int index = 0; index < amount.length(); index++) {
+      final char ch = amount.charAt(index);
+      if (index == 0 && ch == '+') {
+        continue;
+      }
+      if (ch >= '0' && ch <= '9') {
+        seenDigit = true;
+        continue;
+      }
+      if (ch == '.' && !seenDot) {
+        seenDot = true;
+        continue;
+      }
+      throw new IllegalStateException(field + " must be a non-negative amount");
+    }
+    if (!seenDigit) {
+      throw new IllegalStateException(field + " must be a non-negative amount");
+    }
   }
 
   private static String optionalString(final Object value) {
@@ -518,6 +687,44 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
     return Integer.valueOf(1);
   }
 
+  private static String requiredAssertionScheme(final Map<String, Object> value) {
+    final String scheme = requiredString(value, "assertion_scheme");
+    final String expected = expectedAssertionScheme(requiredString(value, "platform"));
+    if (!scheme.equals(expected)) {
+      throw new IllegalStateException("assertion_scheme must be " + expected);
+    }
+    return scheme;
+  }
+
+  private static String requiredAssertionKeyAlgorithm(final Map<String, Object> value) {
+    final String algorithm = requiredString(value, "assertion_key_algorithm");
+    final String expected = expectedAssertionKeyAlgorithm(requiredString(value, "platform"));
+    if (!algorithm.equals(expected)) {
+      throw new IllegalStateException("assertion_key_algorithm must be " + expected);
+    }
+    return algorithm;
+  }
+
+  private static String expectedAssertionScheme(final String platform) {
+    if (OfflineNoteV2.ANDROID_KEYMINT_PLATFORM.equals(platform)) {
+      return OfflineNoteV2.ANDROID_KEYMINT_ASSERTION_SCHEME;
+    }
+    if (OfflineNoteV2.IOS_APP_ATTEST_PLATFORM.equals(platform)) {
+      return OfflineNoteV2.IOS_APP_ATTEST_ASSERTION_SCHEME;
+    }
+    throw new IllegalStateException("platform must be a supported first-release value");
+  }
+
+  private static String expectedAssertionKeyAlgorithm(final String platform) {
+    if (OfflineNoteV2.ANDROID_KEYMINT_PLATFORM.equals(platform)) {
+      return OfflineNoteV2.ANDROID_KEYMINT_ASSERTION_KEY_ALGORITHM;
+    }
+    if (OfflineNoteV2.IOS_APP_ATTEST_PLATFORM.equals(platform)) {
+      return OfflineNoteV2.IOS_APP_ATTEST_ASSERTION_KEY_ALGORITHM;
+    }
+    throw new IllegalStateException("platform must be a supported first-release value");
+  }
+
   private static Long optionalLong(final Object value) {
     if (value == null) {
       return null;
@@ -549,11 +756,60 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
     throw new IllegalStateException("value must be an integer");
   }
 
-  private static byte[] decodeBase64(final String value, final String field) {
+  private static long requiredDeviceProofCounter(final Object value) {
+    if (value instanceof Long longValue) {
+      return longValue.longValue();
+    }
+    if (value instanceof Integer intValue) {
+      return intValue.longValue();
+    }
+    if (value instanceof Short shortValue) {
+      return shortValue.longValue();
+    }
+    if (value instanceof Byte byteValue) {
+      return byteValue.longValue();
+    }
+    if (value instanceof java.math.BigInteger bigInteger) {
+      try {
+        return bigInteger.longValueExact();
+      } catch (ArithmeticException ex) {
+        throw new IllegalStateException("counter must be an integer", ex);
+      }
+    }
+    throw new IllegalStateException("counter must be an integer");
+  }
+
+  private static byte[] decodeExactBase64(final String value, final String field) {
     try {
-      return Base64.getDecoder().decode(value);
+      if (value.isEmpty() || !value.equals(value.trim())) {
+        throw new IllegalArgumentException(field + " must be canonical base64");
+      }
+      final byte[] decoded = Base64.getDecoder().decode(value);
+      if (decoded.length == 0 || !Base64.getEncoder().encodeToString(decoded).equals(value)) {
+        throw new IllegalArgumentException(field + " must be canonical base64");
+      }
+      return decoded;
     } catch (IllegalArgumentException ex) {
-      throw new IllegalStateException(field + " must be base64", ex);
+      throw new IllegalStateException(field + " must be canonical base64", ex);
+    }
+  }
+
+  private static void requireCanonicalSignatureBase64(final String value, final String field) {
+    final byte[] signature = decodeExactBase64(value, field);
+    if (signature.length != 64) {
+      throw new IllegalStateException(field + " must be 64 bytes");
+    }
+  }
+
+  private static void requireLowerHex32(final String value, final String field) {
+    if (value.length() != 64) {
+      throw new IllegalStateException(field + " must be 32-byte lowercase hex");
+    }
+    for (int index = 0; index < value.length(); index++) {
+      final char ch = value.charAt(index);
+      if (!((ch >= '0' && ch <= '9') || (ch >= 'a' && ch <= 'f'))) {
+        throw new IllegalStateException(field + " must be 32-byte lowercase hex");
+      }
     }
   }
 
@@ -594,6 +850,25 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
     return false;
   }
 
+  private static LinkedHashMap<String, String> stripRetiredCanonicalBodyAuthHeaders(
+      final Map<String, String> headers) {
+    final LinkedHashMap<String, String> filtered = new LinkedHashMap<>();
+    for (final Map.Entry<String, String> entry : headers.entrySet()) {
+      if (!isRetiredCanonicalBodyAuthHeader(entry.getKey())) {
+        filtered.put(entry.getKey(), entry.getValue());
+      }
+    }
+    return filtered;
+  }
+
+  private static boolean isRetiredCanonicalBodyAuthHeader(final String name) {
+    return CanonicalRequestSigner.HEADER_ACCOUNT.equalsIgnoreCase(name)
+        || CanonicalRequestSigner.HEADER_SIGNATURE.equalsIgnoreCase(name)
+        || CanonicalRequestSigner.HEADER_TIMESTAMP_MS.equalsIgnoreCase(name)
+        || CanonicalRequestSigner.HEADER_NONCE.equalsIgnoreCase(name)
+        || HEADER_WITNESS.equalsIgnoreCase(name);
+  }
+
   private static String idempotencyKey(final String path, final byte[] body) {
     final String action =
         path.contains("/keys/refill")
@@ -628,7 +903,7 @@ public final class ToriiOfflineNoteIssuerClient implements OfflineNoteIssuerClie
       return "unknown transport error";
     }
     final String detail = cause.getMessage();
-    return detail == null || detail.isBlank() ? cause.getClass().getSimpleName() : detail;
+    return detail == null || detail.trim().isEmpty() ? cause.getClass().getSimpleName() : detail;
   }
 
   private static String responseBodyPreview(final byte[] body) {
